<RelativeLayout
    android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/DarkGreen"
    android:layout_height="match_parent"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:background="@color/ToolbarColor">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/title_contactus"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBar"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:textColor="#fff"
            android:text="@string/phone_number"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#fff"></View>
        <TextView
            android:layout_width="match_parent"
            android:text="John..."
            android:textColor="#fff"
            android:textSize="16sp"
            android:id="@+id/phone"
            android:background="@android:color/transparent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:textColor="#fff"
            android:text="@string/email"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#fff"></View>
        <TextView
            android:layout_width="match_parent"
            android:text="John..."
            android:textColor="#fff"
            android:textSize="16sp"
            android:layout_marginLeft="15dp"
            android:background="@android:color/transparent"
            android:layout_marginRight="15dp"
            android:id="@+id/email"
            android:layout_height="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:textColor="#fff"
            android:text="@string/fax"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#fff"></View>
        <TextView
            android:layout_width="match_parent"
            android:text="John..."
            android:textColor="#fff"
            android:textSize="16sp"
            android:layout_marginLeft="15dp"
            android:background="@android:color/transparent"
            android:layout_marginRight="15dp"
            android:id="@+id/fax"
            android:layout_height="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:textColor="#fff"
            android:text="@string/map"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#fff"></View>
        <TextView
            android:layout_width="match_parent"
            android:text="John..."
            android:textColor="#fff"
            android:textSize="16sp"
            android:id="@+id/location"
            android:background="@android:color/transparent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@drawable/round_rectangle_list">

            <com.google.android.gms.maps.MapView android:id="@+id/mapview"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

        </LinearLayout>
    </LinearLayout>




</RelativeLayout>